--- a/Analyses/Preliminary_Analysis.ipynb
+++ b/Analyses/Preliminary_Analysis.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "b3573b35-2fef-460f-8c96-f8708ffd9d31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import Core Packages\n",
     "%load_ext autoreload\n",
@@ -19,62 +28,81 @@
     "import os\n",
     "from pathlib import Path\n",
     "import platform\n",
-    "import shutil\n",
-    "\n",
-    "# Comment here to add in for either mac or linux computer\n",
-    "if platform.system() == \"Linux\":   # for linux\n",
-    "    sys.path.extend(['/home/kimqi/Documents/Repositories/NeuroPy']) "
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "ac76e412-9e5b-44c4-a302-4be28ca25bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get current OS and set paths dependent on working OS.\n",
+    "cur_system = platform.system()\n",
+    "\n",
+    "if cur_system == \"Linux\":   # for linux\n",
+    "    sys.path.extend(['/home/kimqi/Documents/Repositories/NeuroPy'])  # NeuroPy Path\n",
+    "\n",
+    "    # Directories for current working session. These need to be set manually.\n",
+    "    basepath = Path('/media/kimqi/BK/Data/PCDisruption/Recording_Rats/Creampuff/2024_06_22_HomeCage1')\n",
+    "    save_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Preliminary')\n",
+    "    plot_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Plots')\n",
+    "\n",
+    "elif cur_system == \"Windows\":   # For Windows\n",
+    "    sys.path.extend(['C:\\\\BrianKim\\\\Code\\\\Repositories\\\\NeuroPy'])  # NeuroPy Path\n",
+    "    \n",
+    "    # Directories for current working session. These need to be set manually.\n",
+    "    #basepath = Path('/media/kimqi/BK/Data/PCDisruption/Recording_Rats/Creampuff/2024_06_22_HomeCage1')\n",
+    "    #save_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Preliminary')\n",
+    "    #plot_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Plots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4a9b2f73-663f-4aa3-9465-fbc7300aa7d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import NeuroPy Packages\n",
+    "\n",
+    "# Analyses\n",
+    "from neuropy.analyses import oscillations\n",
+    "from neuropy.analyses.spkepochs import detect_pbe_epochs\n",
+    "\n",
+    "# Core\n",
     "from neuropy import core\n",
+    "\n",
+    "from neuropy.core import Epoch\n",
+    "from neuropy.core import Neurons\n",
+    "from neuropy.core.neurons import binned_pe_raster\n",
+    "from neuropy.core.neurons import pe_raster\n",
+    "\n",
+    "from neuropy.core import BinnedSpiketrain\n",
+    "from neuropy.core import Shank, Probe, ProbeGroup\n",
+    "\n",
     "from neuropy.core.session import ProcessData\n",
     "\n",
-    "# Packages for Probe Configuration\n",
-    "from neuropy.core import Shank, Probe, ProbeGroup\n",
-    "from neuropy.plotting import plot_probe\n",
-    "\n",
-    "# Ripples\n",
-    "from neuropy.analyses import oscillations\n",
-    "\n",
-    "# Neurons\n",
+    "# IO\n",
     "from neuropy.io import PhyIO\n",
-    "from neuropy.core import Neurons\n",
-    "from neuropy.core import BinnedSpiketrain\n",
-    "from neuropy.core.neurons import binned_pe_raster\n",
     "\n",
-    "from neuropy.analyses.spkepochs import detect_pbe_epochs\n",
-    "from neuropy.core import Epoch\n",
-    "from neuropy.io.openephysio import *\n",
+    "from neuropy.io.binarysignalio import BinarysignalIO\n",
+    "from neuropy.io.openephysio import get_dat_timestamps\n",
     "\n",
     "# Plotting\n",
+    "from neuropy.plotting import plot_probe\n",
     "from neuropy.plotting import Fig\n",
     "from neuropy.plotting import spikes\n",
-    "from neuropy.core.neurons import pe_raster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "76804eb6-6215-4854-b675-f4f6513ad574",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "from neuropy.plotting.signals import plot_signal_traces\n",
+    "\n",
+    "# Utils\n",
+    "\n",
+    "from neuropy.utils import neurons_util\n",
     "from neuropy.utils.ccg import correlograms\n",
     "from neuropy.utils.mathutil import contiguous_regions\n",
-    "from neuropy.io.openephysio import get_dat_timestamps\n",
-    "from neuropy.plotting import Fig\n",
-    "from neuropy.io.binarysignalio import BinarysignalIO\n",
-    "from neuropy.plotting.signals import plot_signal_traces\n",
-    "from neuropy.utils.signal_process import filter_sig\n",
-    "from neuropy.utils import neurons_util"
+    "from neuropy.utils.signal_process import filter_sig"
    ]
   },
   {
@@ -100,10 +128,6 @@
     }
    ],
    "source": [
-    "# Import Data Directory\n",
-    "basepath = Path('/media/kimqi/BK/Data/PCDisruption/Recording_Rats/Creampuff/2024_06_22_HomeCage1')\n",
-    "save_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Preliminary')\n",
-    "plot_dir = Path('/home/kimqi/Documents/Code/PlaceCellDisruption/Analyses/Plots')\n",
     "sess = ProcessData(basepath)\n",
     "print(sess.recinfo)\n",
     "print(sess.eegfile)\n",
