alignment and prelim analyses

--- a/Analyses/Stb_Bridgehampton_Alignment.ipynb
+++ b/Analyses/Stb_Bridgehampton_Alignment.ipynb
@@ -21,10 +21,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "import platform\n",
-    "import shutil\n",
-    "\n",
-    "import tkinter as tk\n",
-    "from tkinter import filedialog"
+    "import shutil"
    ]
   },
   {
@@ -38,38 +35,36 @@
      "output_type": "stream",
      "text": [
       "Windows\n",
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\n",
+      "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton\n",
       "Stb_2024-10-29_Bridgehampton\n",
       "Stb_Bridgehampton\n",
-      "D:\\Analyses\\Preliminary\\Stb_2024-10-29_Bridgehampton\n",
-      "D:\\Analyses\\Preliminary\\Stb_2024-10-29_Bridgehampton\\Plots\n"
+      "E:\\Analyses\\Preliminary\\Strawberry\\Stb_2024-10-29_Bridgehampton\n",
+      "E:\\Analyses\\Preliminary\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Plots\n"
      ]
     }
    ],
    "source": [
-    "basepath = Path('D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton')\n",
+    "basepath = Path(r'E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton')\n",
+    "animal = basepath.parent.name\n",
     "# Get current OS and set paths dependent on working OS.\n",
     "cur_system = platform.system()\n",
     "cur_dir = Path(os.getcwd())\n",
-    "\n",
-    "# Get Data Directory\n",
-    "root = tk.Tk()\n",
-    "root.withdraw()\n",
-    "\n",
     "\n",
     "if cur_system == \"Linux\":  # For Linux\n",
     "    sys.path.extend(['/home/kimqi/Documents/Repositories/NeuroPy'])  # NeuroPy Path\n",
     "    # Directories \n",
     "\n",
     "elif cur_system == \"Windows\":\n",
-    "    sys.path.extend(['C:\\\\BrianKim\\\\Code\\\\Repositories\\\\NeuroPy'])  # NeuroPy Path\n",
+    "    sys.path.extend([r'E:\\Code\\Repositories\\NeuroPy'])  # NeuroPy Path\n",
     "    \n",
     "    cur_folder = Path(basepath).name\n",
     "    session_name = re.sub(r'_\\d{4}-\\d{2}-\\d{2}_', '_', cur_folder)\n",
-    "    save_dir = Path('D:\\Analyses\\Preliminary')\n",
+    "    save_dir = Path('E:\\Analyses\\Preliminary')\n",
+    "    save_dir = Path(save_dir / animal)\n",
     "\n",
     "save_dir = Path(save_dir / cur_folder)\n",
     "plot_dir = Path(save_dir / 'Plots')\n",
+    "\n",
     "\n",
     "save_dir.mkdir(parents=True, exist_ok=True)\n",
     "plot_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -84,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "763e0b81-7e31-479b-9310-a642c8943f0f",
    "metadata": {},
    "outputs": [],
@@ -95,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "cc737c30-af2e-4480-8937-866fa3d08d51",
    "metadata": {},
    "outputs": [
@@ -103,9 +98,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Take 2024-10-29 12.01.59 PM.csv\n"
+      "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Take 2024-10-29 12.01.59 PM.csv\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "dir_use = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton\")\n",
+    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton\\2024-10-29_11-48-07\\Record Node 104\\experiment3\\recording2\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
+    "opti_obj = optiio.OptitrackIO(dir_use) # Load in optitrack position data from .csv\n",
+    "ttl_dict = oeio.load_ttl_events(event_dir)  # Load in TTL data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c4ed90b6-9ad2-4803-af16-45814219195f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find OE frame that corresponds to motive start - adjust as needed for different TTL channel or multiple motive starts / stops\n",
+    "motive_ttl_channel = 2\n",
+    "record_start_frame = ttl_dict[\"timestamps\"][np.where(ttl_dict[\"channel_states\"] == motive_ttl_channel)[0][0]]\n",
+    "\n",
+    "# Convert to datetime\n",
+    "motive_start_datetime = ttl_dict['start_time'] + pd.to_timedelta(record_start_frame / ttl_dict[\"SR\"], unit=\"sec\")\n",
+    "\n",
+    "# Now subtract to get absolute time passed in seconds from motive start\n",
+    "motive_times_from_oe_rec_start = (opti_obj.datetime_array - motive_start_datetime).total_seconds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "032b2e65-09f4-4ba3-82e8-955cba2122f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Float64Index([   0.569866667,    0.603199667,    0.636533667,    0.669866667,\n",
+       "                 0.703199667,    0.736533667,    0.769866667,    0.803199667,\n",
+       "                 0.836533667,    0.869866667,\n",
+       "              ...\n",
+       "              2125.403199667, 2125.436533667, 2125.469866667, 2125.503199667,\n",
+       "              2125.536533667, 2125.569866667, 2125.603199667, 2125.636533667,\n",
+       "              2125.669866667, 2125.703199667],\n",
+       "             dtype='float64', length=63755)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "motive_times_from_oe_rec_start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "07b0e329-220b-4f0d-ab33-21a3b2cfa254",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -122,74 +177,19 @@
        " 'event_names': ''}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir_use = Path(r\"D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\")\n",
-    "event_dir = Path(r\"D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\2024-10-29_11-48-07\\Record Node 104\\experiment3\\recording2\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
-    "opti_obj = optiio.OptitrackIO(dir_use) # Load in optitrack position data from .csv\n",
-    "ttl_dict = oeio.load_ttl_events(event_dir)  # Load in TTL data\n",
-    "\n",
     "ttl_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c4ed90b6-9ad2-4803-af16-45814219195f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Take 2024-10-29 12.01.59 PM.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find OE frame that corresponds to motive start - adjust as needed for different TTL channel or multiple motive starts / stops\n",
-    "motive_ttl_channel = 1\n",
-    "record_start_frame = ttl_dict[\"timestamps\"][np.where(ttl_dict[\"channel_states\"] == motive_ttl_channel)[0][0]]\n",
-    "\n",
-    "# Convert to datetime\n",
-    "motive_start_datetime = ttl_dict['start_time'] + pd.to_timedelta(record_start_frame / ttl_dict[\"SR\"], unit=\"sec\")\n",
-    "\n",
-    "# Now subtract to get absolute time passed in seconds from motive start\n",
-    "motive_times_from_oe_rec_start = (opti_obj.datetime_array - motive_start_datetime).total_seconds()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "032b2e65-09f4-4ba3-82e8-955cba2122f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Float64Index([   -53.8936,  -53.860267,  -53.826933,    -53.7936,  -53.760267,\n",
-       "               -53.726933,    -53.6936,  -53.660267,  -53.626933,    -53.5936,\n",
-       "              ...\n",
-       "              2070.939733, 2070.973067,   2071.0064, 2071.039733, 2071.073067,\n",
-       "                2071.1064, 2071.139733, 2071.173067,   2071.2064, 2071.239733],\n",
-       "             dtype='float64', length=63755)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "07b0e329-220b-4f0d-ab33-21a3b2cfa254",
+   "id": "af1ba8a9-097f-446d-b877-5a08f410e247",
    "metadata": {},
    "outputs": [],
    "source": []
