--- a/Analyses/Stb_Sonoma_Alignment.ipynb
+++ b/Analyses/Stb_Sonoma_Alignment.ipynb
@@ -35,38 +35,36 @@
      "output_type": "stream",
      "text": [
       "Windows\n",
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\n",
-      "Stb_2024-10-29_Bridgehampton\n",
-      "Stb_Bridgehampton\n",
-      "D:\\Analyses\\Preliminary\\Stb_2024-10-29_Bridgehampton\n",
-      "D:\\Analyses\\Preliminary\\Stb_2024-10-29_Bridgehampton\\Plots\n"
+      "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\n",
+      "Stb_2024-10-31_Sonoma\n",
+      "Stb_Sonoma\n",
+      "E:\\Analyses\\Preliminary\\Strawberry\\Stb_2024-10-31_Sonoma\n",
+      "E:\\Analyses\\Preliminary\\Strawberry\\Stb_2024-10-31_Sonoma\\Plots\n"
      ]
     }
    ],
    "source": [
-    "basepath = Path(r'E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-29_Bridgehampton')\n",
+    "basepath = Path(r'E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma')\n",
+    "animal = basepath.parent.name\n",
     "# Get current OS and set paths dependent on working OS.\n",
     "cur_system = platform.system()\n",
     "cur_dir = Path(os.getcwd())\n",
-    "\n",
-    "# Get Data Directory\n",
-    "root = tk.Tk()\n",
-    "root.withdraw()\n",
-    "\n",
     "\n",
     "if cur_system == \"Linux\":  # For Linux\n",
     "    sys.path.extend(['/home/kimqi/Documents/Repositories/NeuroPy'])  # NeuroPy Path\n",
     "    # Directories \n",
     "\n",
     "elif cur_system == \"Windows\":\n",
-    "    sys.path.extend(['C:\\\\BrianKim\\\\Code\\\\Repositories\\\\NeuroPy'])  # NeuroPy Path\n",
+    "    sys.path.extend([r'E:\\Code\\Repositories\\NeuroPy'])  # NeuroPy Path\n",
     "    \n",
     "    cur_folder = Path(basepath).name\n",
     "    session_name = re.sub(r'_\\d{4}-\\d{2}-\\d{2}_', '_', cur_folder)\n",
-    "    save_dir = Path('D:\\Analyses\\Preliminary')\n",
+    "    save_dir = Path('E:\\Analyses\\Preliminary')\n",
+    "    save_dir = Path(save_dir / animal)\n",
     "\n",
     "save_dir = Path(save_dir / cur_folder)\n",
     "plot_dir = Path(save_dir / 'Plots')\n",
+    "\n",
     "\n",
     "save_dir.mkdir(parents=True, exist_ok=True)\n",
     "plot_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "763e0b81-7e31-479b-9310-a642c8943f0f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +90,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
+   "id": "bdb46cb4-494d-4583-94eb-9fd65a7bf119",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'channel_states': array([], dtype=int16),\n",
+       " 'time_in_sec': array([], dtype=float64),\n",
+       " 'full_words': array([], dtype=uint64),\n",
+       " 'timestamps': array([], dtype=int64),\n",
+       " 'SR': 30000,\n",
+       " 'recording_start_frame': 9216,\n",
+       " 'experiment_start_frame': 9216,\n",
+       " 'start_time': Timestamp('2024-10-31 11:24:28'),\n",
+       " 'event_names': ''}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir_use = basepath\n",
+    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording1\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
+    "test = oeio.load_ttl_events(event_dir)  # Load in TTL data\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "cc737c30-af2e-4480-8937-866fa3d08d51",
    "metadata": {},
    "outputs": [
@@ -100,56 +130,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Take 2024-10-29 12.01.59 PM.csv\n"
+      "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\Take 2024-10-31 11.33.32 AM.csv\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'channel_states': array([ 2,  1, -1, ..., -1,  1, -1], dtype=int16),\n",
-       " 'time_in_sec': array([ 152.9766    ,  207.44006667,  207.49006667, ..., 1231.88886667,\n",
-       "        1231.93946667, 1231.98946667]),\n",
+       " 'time_in_sec': array([ 544.35506667,  650.0781    ,  650.1281    , ..., 1583.4664    ,\n",
+       "        1583.51726667, 1583.56726667]),\n",
        " 'full_words': array([2, 3, 2, ..., 2, 3, 2], dtype=uint64),\n",
-       " 'timestamps': array([  343282,  1977186,  1978686, ..., 32710650, 32712168, 32713668],\n",
+       " 'timestamps': array([  130460,  3302151,  3303651, ..., 31303800, 31305326, 31306826],\n",
        "       dtype=int64),\n",
        " 'SR': 30000,\n",
-       " 'recording_start_frame': 4246016,\n",
-       " 'experiment_start_frame': 7424,\n",
-       " 'start_time': Timestamp('2024-10-29 12:01:47.286400'),\n",
+       " 'recording_start_frame': 16200192,\n",
+       " 'experiment_start_frame': 9216,\n",
+       " 'start_time': Timestamp('2024-10-31 11:33:27.699200'),\n",
        " 'event_names': ''}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir_use = Path(r\"D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\")\n",
-    "event_dir = Path(r\"D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\2024-10-29_11-48-07\\Record Node 104\\experiment3\\recording2\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
+    "dir_use = basepath\n",
+    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording3\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
     "opti_obj = optiio.OptitrackIO(dir_use) # Load in optitrack position data from .csv\n",
     "ttl_dict = oeio.load_ttl_events(event_dir)  # Load in TTL data\n",
-    "\n",
     "ttl_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "c4ed90b6-9ad2-4803-af16-45814219195f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Data\\PCDisruption\\Pre\\Strawberry\\Stb_2024-10-29_Bridgehampton\\Take 2024-10-29 12.01.59 PM.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find OE frame that corresponds to motive start - adjust as needed for different TTL channel or multiple motive starts / stops\n",
-    "motive_ttl_channel = 1\n",
+    "motive_ttl_channel = 2\n",
     "record_start_frame = ttl_dict[\"timestamps\"][np.where(ttl_dict[\"channel_states\"] == motive_ttl_channel)[0][0]]\n",
     "\n",
     "# Convert to datetime\n",
@@ -161,32 +182,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "032b2e65-09f4-4ba3-82e8-955cba2122f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Float64Index([   -53.8936,  -53.860267,  -53.826933,    -53.7936,  -53.760267,\n",
-       "               -53.726933,    -53.6936,  -53.660267,  -53.626933,    -53.5936,\n",
+       "Float64Index([   0.066133333,    0.099466333,    0.132800333,    0.166133333,\n",
+       "                 0.199466333,    0.232800333,    0.266133333,    0.299466333,\n",
+       "                 0.332800333,    0.366133333,\n",
        "              ...\n",
-       "              2070.939733, 2070.973067,   2071.0064, 2071.039733, 2071.073067,\n",
-       "                2071.1064, 2071.139733, 2071.173067,   2071.2064, 2071.239733],\n",
-       "             dtype='float64', length=63755)"
+       "              3325.266133333, 3325.299466333, 3325.332800333, 3325.366133333,\n",
+       "              3325.399466333, 3325.432800333, 3325.466133333, 3325.499466333,\n",
+       "              3325.532800333, 3325.566133333],\n",
+       "             dtype='float64', length=99766)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "motive_times_from_oe_rec_start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "07b0e329-220b-4f0d-ab33-21a3b2cfa254",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'channel_states': array([ 2,  1, -1, ..., -1,  1, -1], dtype=int16),\n",
+       " 'time_in_sec': array([ 544.35506667,  650.0781    ,  650.1281    , ..., 1583.4664    ,\n",
+       "        1583.51726667, 1583.56726667]),\n",
+       " 'full_words': array([2, 3, 2, ..., 2, 3, 2], dtype=uint64),\n",
+       " 'timestamps': array([  130460,  3302151,  3303651, ..., 31303800, 31305326, 31306826],\n",
+       "       dtype=int64),\n",
+       " 'SR': 30000,\n",
+       " 'recording_start_frame': 16200192,\n",
+       " 'experiment_start_frame': 9216,\n",
+       " 'start_time': Timestamp('2024-10-31 11:33:27.699200'),\n",
+       " 'event_names': ''}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttl_dict"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07b0e329-220b-4f0d-ab33-21a3b2cfa254",
+   "id": "5a8557b3-0a4a-4e65-a4ae-df6aff059dc1",
    "metadata": {},
    "outputs": [],
    "source": []
