Alignment code tests

--- a/Analyses/Stb_Sonoma_Alignment.ipynb
+++ b/Analyses/Stb_Sonoma_Alignment.ipynb
@@ -90,81 +90,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bdb46cb4-494d-4583-94eb-9fd65a7bf119",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'channel_states': array([], dtype=int16),\n",
-       " 'time_in_sec': array([], dtype=float64),\n",
-       " 'full_words': array([], dtype=uint64),\n",
-       " 'timestamps': array([], dtype=int64),\n",
-       " 'SR': 30000,\n",
-       " 'recording_start_frame': 9216,\n",
-       " 'experiment_start_frame': 9216,\n",
-       " 'start_time': Timestamp('2024-10-31 11:24:28'),\n",
-       " 'event_names': ''}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir_use = basepath\n",
-    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording1\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
-    "test = oeio.load_ttl_events(event_dir)  # Load in TTL data\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "cc737c30-af2e-4480-8937-866fa3d08d51",
+   "execution_count": 33,
+   "id": "db7845f2-7be9-4b72-a1c3-08bbe2761381",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\settings.xml\n",
+      "0.6.7\n",
       "E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\Take 2024-10-31 11.33.32 AM.csv\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording3\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
+    "rec_start_path = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording3\")\n",
+    "rec_start = oeio.get_recording_start(rec_start_path)  # Load in TTL data\n",
+    "opti_obj = optiio.OptitrackIO(dir_use) # Load in optitrack position data from .csv\n",
+    "ttl_dict = oeio.load_ttl_events(event_dir)  # Load in TTL data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ab058bd3-f4b4-46a6-87ef-dccf2995304e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-10-31 11:33:27.699200\n",
+      "(datetime.datetime(2024, 10, 31, 11, 33, 27, 806000, tzinfo=tzfile('America/Detroit')), 'ms')\n"
+     ]
+    }
+   ],
+   "source": [
+    "motive_ttl_channel = 2\n",
+    "\n",
+    "motive_start_datetime = ttl_dict['start_time']\n",
+    "motive_time_from_oe_rec_start = opti_obj.datetime_array\n",
+    "print(motive_start_datetime)\n",
+    "print(rec_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0011968f-1d41-43e7-9f27-2fc7ddd25257",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'channel_states': array([ 2,  1, -1, ..., -1,  1, -1], dtype=int16),\n",
-       " 'time_in_sec': array([ 544.35506667,  650.0781    ,  650.1281    , ..., 1583.4664    ,\n",
-       "        1583.51726667, 1583.56726667]),\n",
-       " 'full_words': array([2, 3, 2, ..., 2, 3, 2], dtype=uint64),\n",
-       " 'timestamps': array([  130460,  3302151,  3303651, ..., 31303800, 31305326, 31306826],\n",
-       "       dtype=int64),\n",
-       " 'SR': 30000,\n",
-       " 'recording_start_frame': 16200192,\n",
-       " 'experiment_start_frame': 9216,\n",
-       " 'start_time': Timestamp('2024-10-31 11:33:27.699200'),\n",
-       " 'event_names': ''}"
+       "544.3550666666666"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir_use = basepath\n",
-    "event_dir = Path(r\"E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\2024-10-31_11-24-28\\Record Node 104\\experiment1\\recording3\\events\\RHD_Rec_Controller-100.Rhythm Data\\TTL\")\n",
-    "opti_obj = optiio.OptitrackIO(dir_use) # Load in optitrack position data from .csv\n",
-    "ttl_dict = oeio.load_ttl_events(event_dir)  # Load in TTL data\n",
-    "ttl_dict"
+    "ttl_dict['time_in_sec'][0]\n",
+    "#motive_start_datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c4ed90b6-9ad2-4803-af16-45814219195f",
    "metadata": {},
    "outputs": [],
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "032b2e65-09f4-4ba3-82e8-955cba2122f8",
    "metadata": {},
    "outputs": [
@@ -199,7 +195,7 @@
        "             dtype='float64', length=99766)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
