--- a/Preprocessing/Preprocessing-Base.ipynb
+++ b/Preprocessing/Preprocessing-Base.ipynb
@@ -51,9 +51,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basepath: E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\n",
-      "Working Directory: Stb_2024-10-31_Sonoma\n",
-      "Session Name: Stb_Sonoma\n"
+      "Basepath: E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-30_Suzuka\n",
+      "Working Directory: Stb_2024-10-30_Suzuka\n",
+      "Session Name: Stb_Suzuka\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
     "cur_system = platform.system()\n",
     "\n",
     "# Get Data Directory\n",
-    "basepath = Path(r'E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma')\n",
+    "basepath = Path(r'E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-30_Suzuka')\n",
     "cur_folder = Path(basepath).name\n",
     "session_name = re.sub(r'_\\d{4}-\\d{2}-\\d{2}_', '_', cur_folder)\n",
     "\n",
@@ -81,8 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Save Directory: E:\\Analyses\\Preprocessing\\Stb_2024-10-31_Sonoma\n",
-      "Plot Directory: E:\\Analyses\\Preprocessing\\Stb_2024-10-31_Sonoma\\Plots\n"
+      "Save Directory: E:\\Analyses\\Preprocessing\\Stb_2024-10-30_Suzuka\n",
+      "Plot Directory: E:\\Analyses\\Preprocessing\\Stb_2024-10-30_Suzuka\\Plots\n"
      ]
     }
    ],
@@ -155,17 +155,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "filename: E:\\Data\\PCDisruption\\Strawberry\\Stb_2024-10-31_Sonoma\\Stb_2024-10-31_Sonoma.xml \n",
-      "# channels: 35\n",
-      "sampling rate: 30000\n",
-      "lfp Srate (downsampled): 1250\n",
-      "\n",
-      "duration: 4050.99 seconds \n",
-      "duration: 1.13 hours \n",
-      "\n"
+     "ename": "AssertionError",
+     "evalue": "Found fewer/more than one .xml file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m session_name \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{4}\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m, cur_folder)\n\u001b[1;32m----> 2\u001b[0m sess \u001b[38;5;241m=\u001b[39m \u001b[43mProcessData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbasepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sess\u001b[38;5;241m.\u001b[39mrecinfo)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(sess\u001b[38;5;241m.\u001b[39meegfile)\n",
+      "File \u001b[1;32mE:\\Code\\Repositories\\NeuroPy\\neuropy\\core\\session.py:14\u001b[0m, in \u001b[0;36mProcessData.__init__\u001b[1;34m(self, basepath)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbasepath \u001b[38;5;241m=\u001b[39m basepath\n\u001b[0;32m     13\u001b[0m xml_files \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(basepath\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(xml_files) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound fewer/more than one .xml file\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     16\u001b[0m fp \u001b[38;5;241m=\u001b[39m xml_files[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mwith_suffix(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfilePrefix \u001b[38;5;241m=\u001b[39m fp\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Found fewer/more than one .xml file"
      ]
     }
    ],
